<resources>
    <string name="app_name">HearthScore</string>

    <string name="message_select_winner">Select the winner!</string>
    <string name="player1_name">Player 1</string>
    <string name="player2_name">Player 2</string>
    <string name="default_life">9</string>
    <string name="start_button">Play</string>
    <string name="winner_player1">The winner is Player 1</string>
    <string name="winner_player2">The winner is Player 2</string>

</resources>